force-app/main/default/objects/Despesa__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Despesas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>