force-app/main/default/objects/Despesa__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Despesas</relationshipLabel>
    <relationshipName>Despesas</relationshipName>
    <type>Lookup</type>
</CustomField>